update base plugin properties
Signed-off-by: Marek Kaput <marek.kaput@outlook.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.mkaput.idealelixir
-pluginName = ideal-elixir
+pluginGroup = org.elixir
+pluginName = Ideal Elixir
 pluginRepositoryUrl = https://github.com/mkaput/ideal-elixir
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
