--- a/src/main/resources/messages/ExBundle.properties
+++ b/src/main/resources/messages/ExBundle.properties
@@ -1,3 +1,3 @@
-projectService=Project service: {0}
-randomLabel=The random number is: {0}
-shuffle=Shuffle
+filetype.elixir.description=Elixir files
+filetype.elixirScript.description=Elixir scripts
+filetype.elixirScript.displayName=Elixir script
