try to boot some LS
Signed-off-by: Marek Kaput <marek.kaput@outlook.com>

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,5 +20,7 @@
                   implementationClass="org.elixir.lang.ExScriptFileType"
                   extensions="exs"
                   fieldName="INSTANCE"/>
+
+        <platform.lsp.serverSupportProvider implementation="org.elixir.lsp.ExLspServerSupportProvider"/>
     </extensions>
 </idea-plugin>
