--- a/src/main/resources/messages/ExBundle.properties
+++ b/src/main/resources/messages/ExBundle.properties
@@ -1,3 +1,4 @@
 filetype.elixir.description=Elixir files
 filetype.elixirScript.description=Elixir scripts
 filetype.elixirScript.displayName=Elixir script
+lsp.elixir.presentableName=ElixirLS
